--- a/README
+++ b/README
@@ -1,9 +1,12 @@
 1. Ensure you have python-3.5.1 (https://www.python.org/ftp/python/3.5.1/python-3.5.1-macosx10.6.pkg) git g++ (4.9 or higher) build-essential autotools and zlib1g-dev (either using macports or apt-get)
-2. Get clang + llvm from http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-macosx-apple-darwin.tar.xz (or the equivalent files for Linux)
+2. Get clang + llvm from
+http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-macosx-apple-darwin.tar.xz (OS X)
+http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz (Ubuntu)
+Similar files exist for other distributions as well, though this has only been tested so far on Ubuntu and OS X.
 3. Get sketch from https://people.csail.mit.edu/asolar/sketch-1.6.9.tar.gz; add the sketch binary to the path
 4. git clone https://github.com/anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++' && make
 5. git clone https://github.com/anirudhsk/domino
 6. ./autogen.sh
-7. ./configure CLANG_DEV_LIBS=<wherever you downloaded clang-3.5>
+7. ./configure CLANG_DEV_LIBS=<wherever you untarred clang+llvm in step 2>
 8. make
 9. make check
