--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-1. Ensure you have python-3.5.1 (https://www.python.org/ftp/python/3.5.1/python-3.5.1-macosx10.6.pkg) git g++ (4.9 or higher) build-essential autotools and zlib1g-dev (either using macports or apt-get)
+1. Ensure you have python-3 (> 3.5.1) git g++ (>4.9) build-essential autotools-dev libncurses5-dev autoconf and zlib1g-dev
+(Use a package manager like macports or apt-get to get them.)
 2. Get clang + llvm from
 http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-macosx-apple-darwin.tar.xz (OS X)
 http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz (Ubuntu)
 Similar files exist for other distributions as well, though this has only been tested so far on Ubuntu and OS X.
-3. Get sketch from https://people.csail.mit.edu/asolar/sketch-1.6.9.tar.gz; add the sketch binary to the path
+3. Get sketch from https://people.csail.mit.edu/asolar/sketch-1.6.9.tar.gz, install it, and add the sketch binary to the path.
 4. git clone https://github.com/anirudhSK/banzai.git; cd banzai; ./autogen.sh; ./configure CXX='g++'; sudo make install; cd ..; ./autogen.sh && ./configure CXX='g++' && make
 5. git clone https://github.com/anirudhsk/domino
 6. ./autogen.sh
