--- a/README
+++ b/README
@@ -1,9 +1,7 @@
-1. Ensure you have python3 (> 3.5.1) git g++ (>4.9) build-essential autotools-dev libncurses5-dev autoconf libtool and zlib1g-dev
+1. Ensure you have python3 (> 3.5.1) git g++ (>=7.4) build-essential autotools-dev libncurses5-dev autoconf libtool and zlib1g-dev
 (Use a package manager like macports or apt-get to get them.)
-2. Get clang + llvm from
-http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-macosx-apple-darwin.tar.xz (OS X)
-http://llvm.org/releases/3.5.0/clang+llvm-3.5.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz (Ubuntu)
-Similar files exist for other distributions as well, though this has only been tested so far on Ubuntu and OS X.
+2. Get clang + llvm from https://releases.llvm.org/download.html#5.0.2
+This was tested only for macOS Mojave (10.14) and Ubuntu 16.04.
 3. Install sketch from https://people.csail.mit.edu/asolar/sketch-1.6.9.tar.gz,
 add the sketch binary to the path.
 4. Install banzai from https://github.com/packet-transactions/banzai.git
